Fix nested UL spacing.

--- a/docs/_css/react.scss
+++ b/docs/_css/react.scss
@@ -224,7 +224,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
   }
   ul ul {
-    margin-left: 20px;
+    margin: 6px 0 0 20px;
   }
   li {
     line-height: 16px;
